--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -29,5 +29,6 @@ You should have received a copy of the GNU General Public License along with Tod
     <string name="todo_path_key">todotxtpath</string>
     <string name="prepend_date_pref_key">todotxtprependdate</string>
     <string name="periodic_sync_pref_key">sync_period</string>
+    <string name="google_drive_resource_id_default">0BzsgwfF2CVNUM0pDM0EwRVJ5aFk</string>
 
 </resources>
